# yolov8_pose

./: CMakeLists.txt  README.md
python/: yolov8n-pose.data  yolov8n-pose.quantization.cfg
src/: yolov8_image_pose_node.cc  yolov8_track_pose.cc  yolov8_video_pose.cc
src/bytetrack/: BYTETracker.cpp  BYTETracker.h  STrack.cpp  STrack.h
src/utils/: encode_frame.cc  encode_frame.h  image_drawing.c  image_utils.c  image_utils.h  pose_utils.cc  pose_utils.h  yolov8.cc
